// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAnalyticsFilter changes filter value 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter gets initial value from search parameters 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"},{"type":"zone","name":"A-T-Venue"},{"type":"AP","name":"D8:38:FC:36:78:D0"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter should render correctly 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter should set filter to default when select path does not have switch or AP 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"},{"type":"someType","name":"someValue"},{"type":"randomType","name":"randomValue"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter should set filter with switchGroup & zone 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{"networkNodes":[[{"type":"zone","name":"switchGroup"}]],"switchNodes":[[{"type":"switchGroup","name":"switchGroup"}]]},"path":[{"type":"network","name":"Network"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter should set filter with switches when search parameters has switches 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"},{"type":"switchGroup","name":"switchGroup"},{"type":"switch","name":"D8:38:FC:36:78:D0"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter should set filters correctly path is health and selected node is zone 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"},{"type":"zone","name":"Zone"}]}
  </div>
</DocumentFragment>
`;

exports[`useAnalyticsFilter should set path to default when path is health and selected node is switch 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","path":[{"type":"network","name":"Network"}]}
  </div>
</DocumentFragment>
`;
